# NNIPs_H2_TM_CarbonPlatforms

./: README.md  setup.cfg
data/: gdy_centrada.xyz  graphene_4x4_MJ_centered.xyz
src/carbonplatforms/: celltools.py
src/carbonplatforms/data/: gdy_centrada.xyz
src/ensemble/: mdtools.py
src/optimization/: relax.py
src/propertiescalc/: gr.py  utils.py
