[metadata]
name = NNIPs_H2_TM_CarbonPlatforms
version = 0.0.1
author = Luis Martín Encinar
author_email = luis.martin.encinar@uva.es
description = ""
long_description = file: README.md
license = BSD 3-Clause License
keywords = MLIPs, atomistic simulations, H2 storage, carbon platforms, transition metals, Fine Tuning

[options]
# Busca automaticamente los modulos
packages = find:   
package_dir =
    = src
install_requires =
  numpy
include_package_data = True
