[metadata]
name = NNIPs_H2_TM_CarbonPlatforms
version = 0.0.1
author = Luis Martín Encinar
author_email = luis.martin.encinar@uva.es
description = ""
#long_description = file: README.md
license = BSD 3-Clause License

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
  numpy
include_package_data = True
