[metadata]
name = NNIPs_H2_TM_CarbonPlatforms
version = 0.0.1
author = Luis Martín Encinar
author_email = luis.martin.encinar@uva.es
description = ""
#long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    ase
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
carbonplatforms =
    data/*.xyz
